// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`options as array of objects disabled sets the aria-disabled attribute 1`] = `
<div>
  <div
    class="react-combo-boxes-dropdown"
  >
    <div
      aria-activedescendant="id_option_apple"
      aria-controls="id_listbox"
      aria-describedby="id_aria_description"
      aria-expanded="true"
      aria-labelledby="id-label id"
      class="react-combo-boxes-dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      Apple
    </div>
    <div
      class="react-combo-boxes-dropdown__listbox-wrapper"
    >
      <ul
        aria-activedescendant="id_option_apple"
        aria-labelledby="id-label"
        class="react-combo-boxes-dropdown__listbox"
        id="id_listbox"
        role="listbox"
        tabindex="-1"
      >
        <li
          aria-selected="true"
          class="react-combo-boxes-dropdown__option"
          id="id_option_apple"
          role="option"
        >
          Apple
        </li>
        <li
          aria-disabled="true"
          class="react-combo-boxes-dropdown__option"
          id="id_option_banana"
          role="option"
        >
          Banana
        </li>
      </ul>
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_aria_description"
    >
      When results are available use up and down arrows to review and enter to select
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        role="status"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`options as array of objects group renders grouped options 1`] = `
<div>
  <div
    class="react-combo-boxes-dropdown"
  >
    <div
      aria-controls="id_listbox"
      aria-describedby="id_aria_description"
      aria-expanded="false"
      aria-labelledby="id-label id"
      class="react-combo-boxes-dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      Apple
    </div>
    <div
      class="react-combo-boxes-dropdown__listbox-wrapper"
    >
      <ul
        aria-labelledby="id-label"
        class="react-combo-boxes-dropdown__listbox"
        hidden=""
        id="id_listbox"
        role="listbox"
        tabindex="-1"
      >
        <li
          aria-selected="true"
          class="react-combo-boxes-dropdown__option"
          id="id_option_apple"
          role="option"
        >
          Apple
        </li>
        <li
          aria-hidden="true"
          class="react-combo-boxes-dropdown__group-label"
          id="id_group_citrus"
        >
          Citrus
        </li>
        <li
          aria-labelledby="id_group_citrus id_option_orange"
          class="react-combo-boxes-dropdown__option"
          id="id_option_orange"
          role="option"
        >
          Orange
        </li>
        <li
          aria-labelledby="id_group_citrus id_option_lemon"
          class="react-combo-boxes-dropdown__option"
          id="id_option_lemon"
          role="option"
        >
          Lemon
        </li>
        <li
          aria-hidden="true"
          class="react-combo-boxes-dropdown__group-label"
          id="id_group_berry"
        >
          Berry
        </li>
        <li
          aria-labelledby="id_group_berry id_option_raspberry"
          class="react-combo-boxes-dropdown__option"
          id="id_option_raspberry"
          role="option"
        >
          Raspberry
        </li>
        <li
          aria-labelledby="id_group_berry id_option_strawberry"
          class="react-combo-boxes-dropdown__option"
          id="id_option_strawberry"
          role="option"
        >
          Strawberry
        </li>
      </ul>
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_aria_description"
    >
      When results are available use up and down arrows to review and enter to select
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        role="status"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`options as array of objects label renders a closed drop down 1`] = `
<div>
  <div
    class="react-combo-boxes-dropdown"
  >
    <div
      aria-controls="id_listbox"
      aria-describedby="id_aria_description"
      aria-expanded="false"
      aria-labelledby="id-label id"
      class="react-combo-boxes-dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      Apple
    </div>
    <div
      class="react-combo-boxes-dropdown__listbox-wrapper"
    >
      <ul
        aria-labelledby="id-label"
        class="react-combo-boxes-dropdown__listbox"
        hidden=""
        id="id_listbox"
        role="listbox"
        tabindex="-1"
      >
        <li
          aria-selected="true"
          class="react-combo-boxes-dropdown__option"
          id="id_option_apple"
          role="option"
        >
          Apple
        </li>
        <li
          class="react-combo-boxes-dropdown__option"
          id="id_option_banana"
          role="option"
        >
          Banana
        </li>
        <li
          class="react-combo-boxes-dropdown__option"
          id="id_option_orange"
          role="option"
        >
          Orange
        </li>
      </ul>
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_aria_description"
    >
      When results are available use up and down arrows to review and enter to select
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        role="status"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`options as array of objects missing label treats as a blank string 1`] = `
<div>
  <div
    class="react-combo-boxes-dropdown"
  >
    <div
      aria-controls="id_listbox"
      aria-describedby="id_aria_description"
      aria-expanded="false"
      aria-labelledby="id-label id"
      class="react-combo-boxes-dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
       
    </div>
    <div
      class="react-combo-boxes-dropdown__listbox-wrapper"
    >
      <ul
        aria-labelledby="id-label"
        class="react-combo-boxes-dropdown__listbox"
        hidden=""
        id="id_listbox"
        role="listbox"
        tabindex="-1"
      >
        <li
          aria-selected="true"
          class="react-combo-boxes-dropdown__option"
          id="id_option_"
          role="option"
        />
      </ul>
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_aria_description"
    >
      When results are available use up and down arrows to review and enter to select
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        role="status"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`options options as array of numbers renders a closed drop down 1`] = `
<div>
  <div
    class="react-combo-boxes-dropdown"
  >
    <div
      aria-controls="id_listbox"
      aria-describedby="id_aria_description"
      aria-expanded="false"
      aria-labelledby="id-label id"
      class="react-combo-boxes-dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      0
    </div>
    <div
      class="react-combo-boxes-dropdown__listbox-wrapper"
    >
      <ul
        aria-labelledby="id-label"
        class="react-combo-boxes-dropdown__listbox"
        hidden=""
        id="id_listbox"
        role="listbox"
        tabindex="-1"
      >
        <li
          aria-selected="true"
          class="react-combo-boxes-dropdown__option"
          id="id_option_0"
          role="option"
        >
          0
        </li>
        <li
          class="react-combo-boxes-dropdown__option"
          id="id_option_1"
          role="option"
        >
          1
        </li>
        <li
          class="react-combo-boxes-dropdown__option"
          id="id_option_2"
          role="option"
        >
          2
        </li>
        <li
          class="react-combo-boxes-dropdown__option"
          id="id_option_3"
          role="option"
        >
          3
        </li>
      </ul>
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_aria_description"
    >
      When results are available use up and down arrows to review and enter to select
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        role="status"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`options options as array of strings renders a closed drop down 1`] = `
<div>
  <div
    class="react-combo-boxes-dropdown"
  >
    <div
      aria-controls="id_listbox"
      aria-describedby="id_aria_description"
      aria-expanded="false"
      aria-labelledby="id-label id"
      class="react-combo-boxes-dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      Apple
    </div>
    <div
      class="react-combo-boxes-dropdown__listbox-wrapper"
    >
      <ul
        aria-labelledby="id-label"
        class="react-combo-boxes-dropdown__listbox"
        hidden=""
        id="id_listbox"
        role="listbox"
        tabindex="-1"
      >
        <li
          aria-selected="true"
          class="react-combo-boxes-dropdown__option"
          id="id_option_apple"
          role="option"
        >
          Apple
        </li>
        <li
          class="react-combo-boxes-dropdown__option"
          id="id_option_banana"
          role="option"
        >
          Banana
        </li>
        <li
          class="react-combo-boxes-dropdown__option"
          id="id_option_orange"
          role="option"
        >
          Orange
        </li>
      </ul>
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_aria_description"
    >
      When results are available use up and down arrows to review and enter to select
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        role="status"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`options options as null renders a closed drop down with the option as an empty string 1`] = `
<div>
  <div
    class="react-combo-boxes-dropdown"
  >
    <div
      aria-controls="id_listbox"
      aria-describedby="id_aria_description"
      aria-expanded="false"
      aria-labelledby="id-label id"
      class="react-combo-boxes-dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
       
    </div>
    <div
      class="react-combo-boxes-dropdown__listbox-wrapper"
    >
      <ul
        aria-labelledby="id-label"
        class="react-combo-boxes-dropdown__listbox"
        hidden=""
        id="id_listbox"
        role="listbox"
        tabindex="-1"
      >
        <li
          aria-selected="true"
          class="react-combo-boxes-dropdown__option"
          id="id_option_"
          role="option"
        />
      </ul>
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_aria_description"
    >
      When results are available use up and down arrows to review and enter to select
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        role="status"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`options options as undefined renders a closed drop down with the option as an empty string 1`] = `
<div>
  <div
    class="react-combo-boxes-dropdown"
  >
    <div
      aria-controls="id_listbox"
      aria-describedby="id_aria_description"
      aria-expanded="false"
      aria-labelledby="id-label id"
      class="react-combo-boxes-dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
       
    </div>
    <div
      class="react-combo-boxes-dropdown__listbox-wrapper"
    >
      <ul
        aria-labelledby="id-label"
        class="react-combo-boxes-dropdown__listbox"
        hidden=""
        id="id_listbox"
        role="listbox"
        tabindex="-1"
      >
        <li
          aria-selected="true"
          class="react-combo-boxes-dropdown__option"
          id="id_option_"
          role="option"
        />
      </ul>
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_aria_description"
    >
      When results are available use up and down arrows to review and enter to select
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        role="status"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`options updating options updates the options 1`] = `
<div>
  <div
    class="react-combo-boxes-dropdown"
  >
    <div
      aria-activedescendant="id_option_strawberry"
      aria-controls="id_listbox"
      aria-describedby="id_aria_description"
      aria-expanded="true"
      aria-labelledby="id-label id"
      class="react-combo-boxes-dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      Strawberry
    </div>
    <div
      class="react-combo-boxes-dropdown__listbox-wrapper"
    >
      <ul
        aria-activedescendant="id_option_strawberry"
        aria-labelledby="id-label"
        class="react-combo-boxes-dropdown__listbox"
        id="id_listbox"
        role="listbox"
        tabindex="-1"
      >
        <li
          aria-selected="true"
          class="react-combo-boxes-dropdown__option"
          id="id_option_strawberry"
          role="option"
        >
          Strawberry
        </li>
        <li
          class="react-combo-boxes-dropdown__option"
          id="id_option_raspberry"
          role="option"
        >
          Raspberry
        </li>
        <li
          class="react-combo-boxes-dropdown__option"
          id="id_option_banana"
          role="option"
        >
          Banana
        </li>
      </ul>
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_aria_description"
    >
      When results are available use up and down arrows to review and enter to select
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        role="status"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`placeholderOption renders a placeholder option 1`] = `
<div>
  <div
    class="react-combo-boxes-dropdown"
  >
    <div
      aria-controls="id_listbox"
      aria-describedby="id_aria_description"
      aria-expanded="false"
      aria-labelledby="id-label id"
      class="react-combo-boxes-dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      Please select…
    </div>
    <div
      class="react-combo-boxes-dropdown__listbox-wrapper"
    >
      <ul
        aria-labelledby="id-label"
        class="react-combo-boxes-dropdown__listbox"
        hidden=""
        id="id_listbox"
        role="listbox"
        tabindex="-1"
      >
        <li
          aria-selected="true"
          class="react-combo-boxes-dropdown__option"
          id="id_option_placeholder"
          role="option"
        >
          Please select…
        </li>
        <li
          class="react-combo-boxes-dropdown__option"
          id="id_option_apple"
          role="option"
        >
          Apple
        </li>
        <li
          class="react-combo-boxes-dropdown__option"
          id="id_option_banana"
          role="option"
        >
          Banana
        </li>
        <li
          class="react-combo-boxes-dropdown__option"
          id="id_option_orange"
          role="option"
        >
          Orange
        </li>
      </ul>
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_aria_description"
    >
      When results are available use up and down arrows to review and enter to select
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        role="status"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;
